Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T4994049/T4994049.out
T4994049.java:11:6: compiler.err.expected3: ',', '}', ';'
1 error
